--- a/app/src/main/res/layout/activity_chat_list.xml
+++ b/app/src/main/res/layout/activity_chat_list.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ChatListActivity">
+    tools:context=".AppActivities.ChatListActivity">
 
 
     <android.support.v7.widget.Toolbar
@@ -20,6 +20,7 @@
     </android.support.v7.widget.Toolbar>
 
     <ListView
+        android:id="@+id/chatList"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
