--- a/app/src/main/res/menu/toolbar_users.xml
+++ b/app/src/main/res/menu/toolbar_users.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ChatListActivity">
+    tools:context=".AppActivities.ChatListActivity">
 
     <item
         android:id="@+id/item_new_broadcast"
