--- a/app/src/main/res/layout/activity_chat_list.xml
+++ b/app/src/main/res/layout/activity_chat_list.xml
@@ -35,8 +35,9 @@
             android:layout_margin="10dp"
             android:tint="@color/colorTextPrimary"
             app:backgroundTint="@color/colorAccent"
-            app:elevation="4dp"
-            app:srcCompat="@drawable/ic_more" />
+            app:srcCompat="@drawable/ic_more"
+            app:elevation="4dp" />
+
 
         <android.support.design.widget.FloatingActionButton
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -45,12 +46,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginEnd="15dp"
             android:tint="@color/colorTextPrimary"
             app:backgroundTint="@color/colorAccent"
-            app:elevation="4dp"
-            app:srcCompat="@drawable/ic_chat" />
+            app:srcCompat="@drawable/ic_chat"
+            app:fabSize="mini"
+            app:elevation="4dp" />
 
     </FrameLayout>
 
