--- a/app/src/main/res/layout/activity_users_list.xml
+++ b/app/src/main/res/layout/activity_users_list.xml
@@ -24,7 +24,9 @@
         <ListView
             android:id="@+id/userListView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:listSelector="@color/colorDivider"
+            />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/userListOptions"
