--- a/app/src/main/res/layout/chatroom_item.xml
+++ b/app/src/main/res/layout/chatroom_item.xml
@@ -10,10 +10,9 @@
         android:layout_height="48dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_user"
-        android:background="@color/colorPrimary"/>
+        android:tint="@color/colorTextPrimary"/>
 
     <LinearLayout
-        android:background="@color/colorAccent"
         android:layout_height="match_parent"
         android:layout_width="0px"
         android:layout_weight="2"
